# Prism

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml  sonar-project.properties
.claude/: CLAUDE.md  lintgate.yaml
.claude/rules/: inquiry.md  lg_focus.md  lg_session.md  theory.md
.github/workflows/: ci.yml  spec-badges.yml
src/prism/: __init__.py  behavior.py  economics.py  engine.py  fix.py  forensics.py  health.py  hooks.py  pr_ready.py  recommend.py  server.py  snapshot.py  sources.py  trajectory.py  trends.py
tests/: test_behavior.py  test_economics.py  test_engine.py  test_fix.py  test_forensics.py  test_health.py  test_hooks.py  test_pr_ready.py  test_recommend.py  test_server.py  test_snapshot.py  test_sources.py  test_trajectory.py  test_trends.py
